# ninja_desktop

./: Cargo.toml  LICENSE  README.md
src/: app.rs  diff_patch.rs  main.rs  protocol.rs  session.rs  settings.rs  storage.rs  token.rs
src/ui/: files.rs  mod.rs  settings.rs  tabs.rs  terminal.rs
