[package]
name = "ninja-catcher-desktop"
version = "0.1.0"
edition = "2021"
description = "Native Rust file editor for Ninja Catcher (ComputerCraft remote terminal)"
license = "MIT"

[[bin]]
name = "ninja"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland"] }
egui = "0.34"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
url = "2"

rfd = "0.14"
directories = "5"
rand = "0.8"
anyhow = "1"
thiserror = "1"
similar = "2"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
egui_code_editor = "0.2.24"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
